--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "my-monad-contract/lib/forge-std"]
 	path = my-monad-contract/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "my-monad-contract/lib/openzeppelin-contracts"]
+	path = my-monad-contract/lib/openzeppelin-contracts
+	url = https://github.com/openzeppelin/openzeppelin-contracts
